--- a/Process Dates.ipynb
+++ b/Process Dates.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,14 @@
        "Name: raw_text, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read data\n",
-    "filepath = './data/process/dates.txt'\n",
+    "filepath = './data/dates.txt'\n",
     "doc = []\n",
     "\n",
     "with open(filepath) as file:\n",
@@ -94,17 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def date_sorter():\n",
-    "    mod_df = df\n",
-    "    \n",
+    "def process(df):\n",
     "    # Regular expressions to extract various date formats\n",
     "    r_month_text = r'(?:jan|feb|mar|apr|may|jun|jul|aug|sep|oct|nov|dec)[a-z]*'    \n",
     "    r_year = r'(?:[12][90]\\d{2}|\\d{2})'\n",
     "    r_day = r'[0-3]?[0-9]'\n",
+    "    \n",
     "    regexes = [\n",
     "        r'({}{}{}{})'.format(r'(?:[1][012]|[1-9])[-/\\s]', r_day, '[-/\\s]', r_year), # mm-dd-yyyy\n",
     "        r'({}{}{}{}{})'.format(r_month_text, r'[-\\s.]?\\s?', r_day, '[-,]\\s?', r_year), # month-dd-yyyy\n",
@@ -118,9 +117,9 @@
     "    # Loop over the list of regexes to extract all dates \n",
     "    extracted_series_list = []\n",
     "    for i, regex in enumerate(regexes):\n",
-    "        extracted = mod_df.str.extract(regex, flags=re.IGNORECASE).dropna()\n",
+    "        extracted = df.str.extract(regex, flags=re.IGNORECASE).dropna()\n",
     "        ext_index = extracted.dropna().index\n",
-    "        mod_df = mod_df.drop(ext_index)\n",
+    "        df = df.drop(ext_index)\n",
     "        extracted_series_list.append(extracted)\n",
     "    \n",
     "    # Join all extracted dataframes and replace month name by first three characters\n",
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -155,28 +154,14 @@
        "Name: 0, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "date_sorter().head()"
+    "process(df).head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
