new notebook - predict future sales

--- a/London Boroughs House Price Analysis.ipynb
+++ b/London Boroughs House Price Analysis.ipynb
@@ -40,11 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
     "_uuid": "171c8094b196efc2c78e60cccab57da60625a208"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nbAgg'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%matplotlib notebook\n",
     "\n",
@@ -52,7 +63,10 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "matplotlib.get_backend()"
    ]
   },
   {
