--- a/Extract Dates.ipynb
+++ b/Extract Dates.ipynb
@@ -80,7 +80,7 @@
    ],
    "source": [
     "# Read data\n",
-    "filepath = './data/dates.txt'\n",
+    "filepath = './data/extract_dates/dates.txt'\n",
     "doc = []\n",
     "\n",
     "with open(filepath) as file:\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "Name: 0, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,6 +162,13 @@
    "source": [
     "process(df).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
