--- a/House-Buy.ipynb
+++ b/House-Buy.ipynb
@@ -12,16 +12,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### New Builds"
+    "## Help to Buy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Wood Green\n",
+    "\n",
+    "#### A08 at Fairview New Homes - The Lane, Tottenham, London N17 (19 mins to KingsCross!)\n",
+    "- £315,000\n",
+    "- 020 8022 1837\n",
+    "- Wood Green (Picadally)\n",
+    "- https://www.onthemarket.com/details/7983100/\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "#### Penthouse, Morville St, Bow, E3 (Stratford ~30mins)\n",
     "-    Price: POA\n",
-    "-    Nearest stn: Bow Road (district) \n",
+    "-    Bow Road (district) \n",
     "-    No. 020 8022 6970\n",
     "-    https://www.onthemarket.com/details/5341249/?confirm=for-sale"
    ]
@@ -30,17 +44,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The Rise, Alperton\n",
+    "#### Great West Road, TW8 (Right next to a Big Park)\n",
     "- £350,000\n",
-    "- 020 8022 6543\n",
-    "- Alperton (Picadally), Hanger Lane (Central)\n",
-    "- https://www.onthemarket.com/details/7592208/"
+    "- 020 8033 8941\n",
+    "- Gunnersbury\n",
+    "- https://www.onthemarket.com/details/8109117/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Upton Park - Lots of developments?\n",
+    "\n",
+    "#### Taylor House, Upton Gardens, Upton Park, London, E13\n",
+    "- £350,000\n",
+    "- 020 8115 0051\n",
+    "- Upton Park, EastHam\n",
+    "- https://www.onthemarket.com/details/6205067/\n",
+    "\n",
+    "#### Lyall House, Shipbuilding Way, Priory Road, Upton Gardens, Upton Park, London, E13\n",
+    "- 338,000\n",
+    "- 020 8115 0051\n",
+    "- Upton Park, EastHam\n",
+    "- https://www.onthemarket.com/details/6436221/\n",
+    "\n",
+    "\n",
+    "#### Brand New Development, Upton Park, Eastham, London, E13\n",
+    "- 340,000\n",
+    "- 020 8115 0051\n",
+    "- Upton Park, EastHam\n",
+    "- https://www.onthemarket.com/details/6436222/\n",
+    "\n",
+    "#### High Street North East Ham E6\n",
+    "- 325,000\n",
+    "- 020 8022 0275\n",
+    "- EastHam\n",
+    "- https://www.onthemarket.com/details/8098686/\n",
+    "\n",
+    "\n",
+    "#### The Heights, Barking IG11 (Big Building)\n",
+    "- £300,000\n",
+    "- 020 8033 9415\n",
+    "- Barking (Hammersmith)\n",
+    "- https://www.onthemarket.com/details/6042587/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Golders Green\n",
+    "\n",
+    "\n",
     "#### The Vale, Golders Green\n",
     "- £349,950\n",
     "- 020 8115 1406\n",
@@ -66,24 +122,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upton Park - Lots of developments?\n",
+    "### Hanger Lane\n",
     "\n",
-    "#### Taylor House, Upton Gardens, Upton Park, London, E13\n",
+    "#### The Rise, Alperton\n",
     "- £350,000\n",
-    "- 020 8115 0051\n",
-    "- Upton Park, EastHam\n",
-    "- https://www.onthemarket.com/details/6205067/\n",
-    "\n",
-    "#### Lyall House, Shipbuilding Way, Priory Road, Upton Gardens, Upton Park, London, E13\n",
-    "- 338,000\n",
-    "- 020 8115 0051\n",
-    "- Upton Park, EastHam\n",
-    "- https://www.onthemarket.com/details/6436221/\n",
-    "\n",
-    "\n",
-    "#### Brand New Development, Upton Park, Eastham, London, E13\n",
-    "- 340,000\n",
-    "- "
+    "- 020 8022 6543\n",
+    "- Alperton (Picadally), Hanger Lane (Central)\n",
+    "- https://www.onthemarket.com/details/7592208/"
    ]
   },
   {
